package timebridge.model.event.component;


public class Course {
    private String name;
    private String code;

    public Course() {
        this.name = "";
        this.code = "";
    }

    public Course(String code, String name) {
        this.name = name;
        this.code = code;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getCode() {
        return code;
    }

    public void setCode(String code) {
        this.code = code;
    }
}
